oidc-plugin/yaml/oidc-plugin-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: openfaas
    component: oidc-plugin
  name: oidc-plugin
  namespace: "openfaas"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: oidc-plugin
  template:
    metadata:
      annotations:
        prometheus.io.scrape: "false"
      labels:
        name: oidc-plugin
    spec:
      containers:
      - name:  oidc-plugin
        resources:
          requests:
            memory: "20Mi"
            cpu: "20m"
        image: alexellis2/openfaas-oidc-plugin:0.2.4
        imagePullPolicy: Always
        securityContext:
          readOnlyRootFilesystem: false
          runAsUser: 10001
        args:
        - "-license=eyJhbGciOiJFUzI1NiIsInR5cCI6IkpXVCJ9.eyJuYW1lIjoiT3BlbkZhYVMgTHRkIiwiZW1haWxfYWRkcmVzcyI6InNhbGVzQG9wZW5mYWFzLmNvbSIsImF1ZCI6ImlubGV0cy1wcm8iLCJleHAiOjE1NzU3NTgyNjMsImp0aSI6IjgwODEiLCJpYXQiOjE1NzUxNTM0NjMsImlzcyI6ImlubGV0cy1wcm8iLCJzdWIiOiJPcGVuRmFhUyBMdGQifQ.KCwXHF3WQ8BQYks6zTOK8N8vWYSbdtrYc70S_h78hNt4tp4MQlaFG1k0hoSzjAOZCPaomyh2T7OEC5tkaqqhqw"
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
