oidc-plugin/yaml/oidc-plugin-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: oidc-plugin
  namespace: openfaas
spec:
  tls:
  - hosts:
    - gw.secure-faas.com
    - oidc.secure-faas.com
    secretName: tls-secret
  rules:
  - host: oidc.secure-faas.com
    http:
      paths:
      - backend:
          serviceName: oidc-plugin
          servicePort: 8080
  - host: gw.secure-faas.com
    http:
      paths:
      - backend:
          serviceName: gateway
          servicePort: 8080
